MonetDB4/tests/BugReports/Tests/no.150.stable.out.STATIC
stdout of test 'no.150` in directory 'tests/BugReports` itself:

#> Mtest:	milS no.150 milS
#> Mtest:	Mtimeout -timeout 210 Mserver -modulesilent -yaccsilent -d8 -db tests_BugReports -single no.150.milS
# Monet Database Server V4.1
# Copyright (c) 1993-1999, CWI & SION. All rights reserved.
# compiled for IRIX646.5/32bit on Fri Jan 14 19:36:03 MET 2000.
#script:no.150.milS


# Monet Database Server V4.3.5
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit; dynamically linked.
# >Number:         150
# >Category:       MIL
# >Synopsis:       Mserver crashes on non-existing module.
# >Confidential:   no
# >Severity:       critical
# >Priority:       high
# >Responsible:    boncz (Peter Boncz)
# >State:          open
# >Class:          sw-bug
# >Submitter-Id:   unknown
# >Arrival-Date:   Wed Apr  8 16:48:12 1998
# >Originator:     quak@cwi.nl
# >Organization:
# UvA
# >Release:        980101
# >Environment:
# solaris
# >Description:
# On solaris if you load a module which does not exist,
# the Mserver crashes. How to repeat:
# 
# Mclient
# > module("jabberwocky");
# 
# (Under the assumption that the module "jabberwocky"
# does not exist

setoid(oid(20000000));
module("jabberwocky");
!ERROR: moduleClient: module(jabberwocky) load error.
module("_jabberwocky");
!ERROR: TBL_openmod: DL_open: library not found (STATIC).
!ERROR: TBL_loadmod: module load _jabberwocky cancelled.
!ERROR: moduleClient: module(_jabberwocky) load error.
quit();

# 17:07:22 >  
# 17:07:22 >  Done.
# 17:07:22 >  

